# OnlyFiles

./: .gitignore  Execution.py  File_Manager.py  File_Path_Changer.py  Implant_logging.py  LICENSE  README.md  __init__.py  basic_file_path.py  cli_app.py  commands.py  help_manager.py  implant_logging.py  install.bat  install.sh  logger.py  main.py  pyproject.toml  setup.py  terminal_interface.py  uninstall.bat  uninstall.sh
Documents/: help.txt  requirements.txt
OnlyFiles_Front_End/: about.html  features.html  index.html  style.css
cli/: files.py
dev/: index.html  script.js  style.css
doc/: help.txt
docs/: help.txt
scripts/: install.bat  install.sh  uninstall.bat  uninstall.sh
src/cli/: cli_app.py  commands.py  terminal_interface.py
src/core/: __init__.py  drive_operations.py  file_operations.py  file_organizer.py
src/onlyfiles/: cli_app.py  main.py
src/onlyfiles/cli/: commands.py  terminal_interface.py
src/onlyfiles/core/: execution.py  file_manager.py  file_types.py
src/onlyfiles/utils/: help_manager.py  logger.py
src/resources/: help_text.txt
src/utils/: __init__.py  file_navigator.py  logging.py  path_utils.py
