[tool.poetry]
name = "file-manager-cli"
version = "0.1.0"
description = "CLI para gerenciamento de arquivos"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
rich = "^13.7.0"
pathlib = "^1.0.1"

[tool.poetry.scripts]
files = "cli.files:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 