[tool.poetry]
name = "onlyfiles"
version = "1.0.0"
description = "CLI para gerenciamento de arquivos"
authors = ["Grupo 05 - OnlyFiles"]
packages = [{include = "*"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
rich = "^13.7.0"
pathlib = "^1.0.1"

[tool.poetry.scripts]
onlyfiles = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 